--- a/src/Services/Discount/DiscountGRPC/Dockerfile
+++ b/src/Services/Discount/DiscountGRPC/Dockerfile
@@ -12,20 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Cart/CartAPI/CartAPI.csproj", "Services/Cart/CartAPI/"]
-COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
-RUN dotnet restore "./Services/Cart/CartAPI/CartAPI.csproj"
+COPY ["Services/Discount/DiscountGRPC/DiscountGRPC.csproj", "Services/Discount/DiscountGRPC/"]
+RUN dotnet restore "./Services/Discount/DiscountGRPC/DiscountGRPC.csproj"
 COPY . .
-WORKDIR "/src/Services/Cart/CartAPI"
-RUN dotnet build "./CartAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Services/Discount/DiscountGRPC"
+RUN dotnet build "./DiscountGRPC.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./CartAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./DiscountGRPC.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "CartAPI.dll"]
+ENTRYPOINT ["dotnet", "DiscountGRPC.dll"]
