--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -23,6 +23,11 @@ services:
       - "5433:5432"
     volumes:
       - postgres_cart:/var/lib/postgresql/data/     
+  distributedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+    - "6379:6379"
   catalogapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
@@ -34,6 +39,23 @@ services:
     ports:
       - "6000:8080"
       - "6060:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  cartapi:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=cartdb;Port=5432;Database=CartDb;User Id=postgres;Password=postgres;Include Error Detail=true
+      - ConnectionStrings__Redis=distributedcache:6379
+    depends_on:
+      - cartdb
+      - distributedcache
+    ports:
+      - "6001:8080"
+      - "6061:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
