--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,12 +6,21 @@ services:
 
   cartdb:
     image: postgres
+  
+  distributedcache:
+    image: redis   
 
   catalogapi:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Services/Catalog/CatalogAPI/Dockerfile
+
+  cartapi:
+    image: ${DOCKER_REGISTRY-}cartapi
+    build:
+      context: .
+      dockerfile: Services/Cart/CartAPI/Dockerfile
 
 volumes:
   postgres_catalog:
