--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -22,6 +22,13 @@ services:
       context: .
       dockerfile: Services/Cart/CartAPI/Dockerfile
 
+  discountgrpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/DiscountGRPC/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_cart:
+
