--- a/src/Services/Order/OrderApplication/OrderApplication.csproj
+++ b/src/Services/Order/OrderApplication/OrderApplication.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\OrderDomain\OrderDomain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
