--- a/src/Services/Order/OrderDomain/OrderDomain.csproj
+++ b/src/Services/Order/OrderDomain/OrderDomain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
+    <PackageReference Include="MediatR" Version="12.5.0" />
   </ItemGroup>
 
 </Project>
