--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,6 +9,8 @@ services:
   
   distributedcache:
     image: redis   
+  orderdb:
+    image: mcr.microsoft.com/mssql/server
 
   catalogapi:
     image: ${DOCKER_REGISTRY-}catalogapi
