Added RabbitMQ for async communication

--- a/src/Services/Cart/CartAPI/Dockerfile1.original
+++ b/src/Services/Cart/CartAPI/Dockerfile1.original
@@ -12,24 +12,20 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Order/OrderAPI/OrderAPI.csproj", "Services/Order/OrderAPI/"]
-COPY ["Services/Order/OrderApplication/OrderApplication.csproj", "Services/Order/OrderApplication/"]
-COPY ["BuildingBlocks/BuildingbBlocksMessaging/BuildingBlocksMessaging.csproj", "BuildingBlocks/BuildingbBlocksMessaging/"]
+COPY ["Services/Cart/CartAPI/CartAPI.csproj", "Services/Cart/CartAPI/"]
 COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
-COPY ["Services/Order/OrderDomain/OrderDomain.csproj", "Services/Order/OrderDomain/"]
-COPY ["Services/Order/OrderInfrastructure/OrderInfrastructure.csproj", "Services/Order/OrderInfrastructure/"]
-RUN dotnet restore "./Services/Order/OrderAPI/OrderAPI.csproj"
+RUN dotnet restore "./Services/Cart/CartAPI/CartAPI.csproj"
 COPY . .
-WORKDIR "/src/Services/Order/OrderAPI"
-RUN dotnet build "./OrderAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Services/Cart/CartAPI"
+RUN dotnet build "./CartAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./OrderAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./CartAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "OrderAPI.dll"]
+ENTRYPOINT ["dotnet", "CartAPI.dll"]
