--- a/src/Services/Order/OrderAPI/OrderAPI.csproj
+++ b/src/Services/Order/OrderAPI/OrderAPI.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>5940d2ef-8b77-4116-993d-2f1dd3ba3b41</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
