--- a/src/Services/Cart/CartAPI/CartAPI.csproj
+++ b/src/Services/Cart/CartAPI/CartAPI.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingbBlocksMessaging\BuildingBlocksMessaging.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
   </ItemGroup>
 
@@ -27,10 +28,6 @@
     <Protobuf Include="..\..\Discount\DiscountGRPC\Protos\discount.proto" GrpcServices="Client">
       <Link>Protos\discount.proto</Link>
     </Protobuf>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Carts\CheckoutCart\" />
   </ItemGroup>
 
 </Project>
