--- a/src/Services/Order/OrderAPI/appsettings.json
+++ b/src/Services/Order/OrderAPI/appsettings.json
@@ -8,6 +8,10 @@
         "UserName": "guest",
         "Password": "guest"
     },
+    "FeatureManagement": {
+
+        "OrderFullfilment": false
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
