--- a/src/Services/Order/OrderApplication/OrderApplication.csproj
+++ b/src/Services/Order/OrderApplication/OrderApplication.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingbBlocksMessaging\BuildingBlocksMessaging.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
     <ProjectReference Include="..\OrderDomain\OrderDomain.csproj" />
   </ItemGroup>
