--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -5,7 +5,8 @@
       "commandVersion": "1.0",
       "serviceActions": {
         "catalogapi": "StartDebugging",
-        "cartapi": "StartDebugging"
+        "cartapi": "StartDebugging",
+        "orderapi": "StartDebugging"
       }
     }
   }
