Added Yarp gateway

--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -6,7 +6,8 @@
       "serviceActions": {
         "catalogapi": "StartDebugging",
         "cartapi": "StartDebugging",
-        "orderapi": "StartDebugging"
+        "orderapi": "StartDebugging",
+        "yarpapigateway": "StartDebugging"
       }
     }
   }
