--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -39,8 +39,15 @@ services:
       context: .
       dockerfile: Services/Order/OrderAPI/Dockerfile
 
+  yarpapigateway:
+    image: ${DOCKER_REGISTRY-}yarpapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_cart:
+
 
 
